--- a/idex.html
+++ b/idex.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     esto es una prueba
-    <script type='module' src="./js/main.js" ></script>
+    <script  src="./js/main.js" ></script>
 </body>
 </html>
