--- a/idex.html
+++ b/idex.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    esto es una prueba
-    <script  src="./js/main.js" ></script>
+  <p>esto es una prueba</p>  
+
 </body>
 </html>
